# fastapi-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  dev.db  docker-compose.yml  pyproject.toml
