[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "A production-ready FastAPI project template"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlmodel = "^0.0.8"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
pytest-asyncio = "^0.21"
httpx = "^0.26.3"
black = "^24.3"
isort = "^5.13"
pre-commit = "^4.6"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
